--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -7,3 +7,5 @@ jobs:
     steps:
       - name: Test Verify Commits
         uses: atomiix/verify-commit-action@main
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
