--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -8,5 +8,5 @@ jobs:
       - name: Test Verify Commits
         uses: atomiix/verify-commit-action@main
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.TOKEN }}
           only-organization: true
